<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.exiach.betterworld.BetterWorld">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="#009688"
                android:textColor="#ffff"
                android:onClick="backTopic"
                android:text="Back"/>

            <TextView
                android:id="@+id/title_topic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/env_pollution" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="#009688"
                android:textColor="#ffff"
                android:text="next"
                android:onClick="nextTopic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/environmental_pollution">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Description"/>

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/env_pollution_description"/>

            <TextView
                android:id="@+id/see_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#2196F3"
                android:onClick="seeMore"
                android:text="see more..."/>

            <LinearLayout
                android:id="@+id/more_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="Tips"/>

                <TextView
                    android:id="@+id/tip_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:text="@string/env_pollution_tip_one"/>

                <TextView
                    android:id="@+id/tip_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:text="@string/env_pollution_tip_two"/>

                <TextView
                    android:id="@+id/tip_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:text="@string/env_pollution_tip_three"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="More Information"/>

                <TextView
                    android:id="@+id/link_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:autoLink="web"
                    android:textColorLink="#2196F3"
                    android:text="@string/env_pollution_link_one"/>

                <TextView
                    android:id="@+id/link_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="15sp"
                    android:autoLink="web"
                    android:textColorLink="#2196F3"
                    android:text="@string/env_pollution_link_two"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

